docs: link components dialog in adding component page

--- a/content/electron-shadcn/docs/customization/adding-components.mdx
+++ b/content/electron-shadcn/docs/customization/adding-components.mdx
@@ -102,3 +102,7 @@ Add new variants to existing components:
 - **Use composition**: Build complex UIs by composing smaller shadcn/ui components
 - **Follow the path alias**: Always import from `@/components/ui` for consistency
 - **Check for updates**: Occasionally check [shadcn/ui](https://ui.shadcn.com) for component updates and new additions
+
+## Components Catalog
+
+electron-shadcn includes some components to provide common functionality in Electron apps. Check out the [Components](/electron-shadcn/docs/components/drag-window-region) section.
